# cairo-contracts

./: .gitignore  LICENSE  README.md  deploy.txt  erc721.cairo  pyproject.toml
L1/: discreteGDA.sol
contracts/: DiscreteGDA.cairo  ERC721_Metadata_base.cairo  ERC721_stark_mfer.cairo  discreteGDA.cairo
contracts/utils/: Utils.cairo
contracts_starknet_messaging/: l2messagingnft.cairo
contracts_starknet_messaging/L1/: L1MintL2Nft.sol
nfts/: README.md
nfts/flipped/: 1.json  10.json  100.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+60 more)
nfts/original/: 1.json  10.json  100.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+60 more)
tests/: test_contract.py
